umbrello/codeimport/kdevcppparser/cpptree2uml.cpp - In function parseBaseClause() first call Import_Utils::createUMLObject()   for creating the parent object coresponding to baseName, and then call     Import_Utils::createGeneralization(UMLClassifier*, UMLClassifier*)   with the parent object obtained.

umbrello/codeimport/import_utils.cpp
- At function
    createGeneralization(UMLClassifier *child, const QString &parentName)
  mention its shortcoming and mention the preferred solution as applied
  above.

BUG:336810